# Flutter_Spike

./: README.md
test_app/: pubspec.yaml
test_app/.run/: lottie_main.dart.run.xml
test_app/ios/Runner.xcodeproj/: project.pbxproj
test_app/lib/: lottie_main.dart  main.dart
websocket_backend/: pyproject.toml  websocket.py
