[tool.poetry]
name = "websocket-backend"
version = "0.1.0"
description = ""
authors = ["DanMark <daniel.mark.kiss@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sanic = "^23.3.0"


[tool.poetry.group.dev.dependencies]
devtools = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
